--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "express-useragent": "^1.0.15",
     "http-proxy-middleware": "^2.0.6",
+    "nodemon": "^2.0.16",
     "typescript": "^4.6.4",
     "webpack-dev-middleware": "^5.3.1",
     "workbox-precaching": "^6.5.3"
