--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "ts-node": "^10.7.0",
     "tsconfig-paths": "^4.0.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
