production 관련 추가

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch \"src/**\" --ext \"ts\" --exec \"ts-node -r tsconfig-paths/register --files ./src/index.ts\""
+    "dev": "nodemon --watch \"src/**\" --ext \"ts\" --exec \"ts-node -r tsconfig-paths/register --files ./src/index.ts\"",
+    "start": "nodemon --exec \"ts-node -r tsconfig-paths/register --files ./src/index.ts\""
   },
   "repository": {
     "type": "git",
