--- a/ssl/ry.conf
+++ b/ssl/ry.conf
@@ -3,7 +3,7 @@ default_bits = 2048
 distinguished_name = req_distinguished_name
 emailAddress = akswnd98@gmail.com
 req_extensions = v3_req
-x509_extensions = v3_ca
+x509_extensions = v3_req
 
 [ req_distinguished_name ]
 countryName = KR
