--- a/ssl/rootca.conf
+++ b/ssl/rootca.conf
@@ -2,7 +2,7 @@
 default_bits = 2048
 distinguished_name = req_distinguished_name
 emailAddress = akswnd98@gmail.com
-req_extensions = v3_req
+req_extensions = v3_ca
 x509_extensions = v3_ca
 
 [ req_distinguished_name ]
